feat: Implement chat messaging system with conversations and message handling
- Add ChatConversation and ChatMessage domain models for managing conversations and messages.
- Create DTOs for message responses, conversation responses, and message requests.
- Implement repositories for MongoDB to handle chat conversations and messages.
- Develop ChatMessageService for business logic related to sending messages, marking them as read, and managing conversations.
- Introduce WebSocket support for real-time message delivery and typing indicators.
- Create ChatWebSocketController to handle WebSocket messaging events.
- Add validation and error handling for message sending and reading operations.